<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.alex.contactstest.NewAssignment">

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:text="Name:" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <EditText android:id="@+id/assignment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/new_assignment_name"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:text="Due Date:" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingRight="3dp" />
        <TextView android:id="@+id/assignment_due_date"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textSize = "18sp"
            android:hint="@string/course_time" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:text="Due Time:" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingRight="0dp" />
        <TextView android:id="@+id/assignment_due_time"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:hint="@string/course_time" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:orientation="horizontal" >
        <Button android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveCourse"/>

    </RelativeLayout>

</LinearLayout>
