<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.alexpavel.simpleassignmentplanner.NewCourse" >
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:text="Name:" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
            <EditText android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_course_name"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:text="Start Time:" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
            <TextView android:id="@+id/course_start_time"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:textSize = "18sp"
                android:hint="@string/course_time" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:text="End Time: " android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingRight="5dp" />
            <TextView android:id="@+id/course_end_time"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:hint="@string/course_time" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:id="@+id/prof_layout">
            <TextView android:text="Professor Name:" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
            <EditText android:id="@+id/course_prof_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prof_name" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_times">
            <TextView
                android:paddingLeft="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:hint="Course Times"
                android:layout_alignParentLeft = "true"> </TextView>
            <ImageView android:id="@+id/add_course_times"
                android:layout_width="26sp"
                android:layout_height="26sp"
                android:src = "@drawable/ic_add_green_600_48dp"
                android:layout_alignParentRight = "true"/>
        </RelativeLayout>
        <LinearLayout android:paddingTop="11dp"
            android:id="@+id/big_papa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout android:id="@+id/hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:paddingTop="13dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true">
                <Button
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:onClick="saveCourse"/>
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
